--- a/kanban-frondend/src/app/costum-styles/light-theme.scss
+++ b/kanban-frondend/src/app/costum-styles/light-theme.scss
@@ -172,6 +172,14 @@ $accent-light: hsl(232, 72%, 21%);
     animation: bounce 2s 1;
 }
 
+.board-col-overflow-light{
+    overflow-y: auto;
+    max-height: inherit;
+    padding:8px;
+    height: 700px;
+    color:$text-light;
+}
+
 .board-wrapper-light{
     position: relative;
     top:120px;
@@ -183,23 +191,33 @@ $accent-light: hsl(232, 72%, 21%);
     padding: 0;
 }
 
-.board-user-light{
-    color:$text-light;
+.board-user-light {
+    color: $text-light;
     position: absolute;
-    top:76px;
-    left:56px;
-
+    top: 76px;
+    width: 100%;
     display: flex;
-    justify-content: flex-start;
-    align-items: first baseline;
-    gap:32px;
+    justify-content: center;
+    overflow: hidden;
 
-    h1{
-        font-size: 16px;
-    }
+    .hud {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        width: 90%;
+        margin: 0 16px;
+        padding: 0 8px;
+        overflow-x: auto;
+        white-space: nowrap;
+        gap: 16px;
 
-    p {
-        font-size: 12px;
+        h1 {
+            font-size: 20px;
+        }
+
+        p {
+            font-size: 14px;
+        }
     }
 }
 
@@ -244,8 +262,29 @@ $accent-light: hsl(232, 72%, 21%);
         align-items: flex-start;
         gap:32px;
     }
-    .board-user-light{
+    .board-user-light {
+        overflow: hidden;
+        display: flex;
         justify-content: center;
-        gap:24px;
+
+        .hud {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            width: 90%;
+            margin: 0 16px;
+            padding: 0 8px;
+            overflow-x: auto;
+            white-space: nowrap; /* Prevents text from wrapping */
+            gap: 16px;
+
+            h1 {
+                font-size: 14px;
+            }
+
+            p {
+                font-size: 12px;
+            }
+        }
     }
 }
