--- a/kanban-frondend/src/styles.scss
+++ b/kanban-frondend/src/styles.scss
@@ -178,3 +178,7 @@ html {
 .mat-mdc-snack-bar-container .mdc-snackbar__surface {
     background-color: $link !important;
 }
+
+.pointer{
+    cursor: pointer;
+}
